@@ -401,14 +401,12 @@ class Vps_Controller_Action_Component_PagesController extends Vps_Controller_Act
 
     public function openPreviewAction()
     {
-        $host = $_SERVER['HTTP_HOST'];
-        $host = str_replace('www.', '', $host);
-        $host = 'preview.' . $host;
         $page = Vps_Component_Data_Root::getInstance()->getComponentById($this->_getParam('page_id'));
         if (!$page) {
-            throw new Vps_ClientException(trlVps('Page not found'));
+            throw new Vps_Exception_Client(trlVps('Page not found'));
         }
-        $href = 'http://' . $host . $page->url;
+        $previewDomain = Vps_Config_Web::getInstance('preview')->server->domain;
+        $href = 'http://' . $previewDomain . $page->url;
         header('Location: '.$href);
         exit;
     }
